--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Football</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmxsOF2Bfgc4TJYClmoUnvphdt61Zm-78gF_oRscbq&s" type="image/x-icon">
+</head>
+<body>
+    
+</body>
+</html>
